src/test/ui/fmt/feature-gate-format-args-capture.stderr
error: there is no argument named `foo`
  --> $DIR/feature-gate-format-args-capture.rs:2:14
   |
LL |     format!("{foo}");
   |              ^^^^^
   |
   = help: if you intended to capture `foo` from the surrounding scope, add `#![feature(format_args_capture)]` to the crate attributes

error: there is no argument named `foo`
  --> $DIR/feature-gate-format-args-capture.rs:5:13
   |
LL |     panic!("{foo} {bar}", bar=1);
   |             ^^^^^
   |
   = help: if you intended to capture `foo` from the surrounding scope, add `#![feature(format_args_capture)]` to the crate attributes

error: aborting due to 2 previous errors

